GIM is able to get titles but not abstracts

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,5 +28,8 @@
       <h1 class="mb-4">Academic Search Portal</h1>
       {% block content %}{% endblock %}
     </div>
+
+    <!-- Bootstrap JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
