Adjusting code to accomodate arxiv db

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,16 @@
               >Global Index Medicus</label
             >
           </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="arxivCheck"
+              name="databases"
+              value="arxiv"
+            />
+            <label class="form-check-label" for="arxivCheck">arXiv</label>
+          </div>
         </div>
 
         <div class="row mt-4">
